Add color theme and features page

--- a/src/styles/1-helpers/_variables.scss
+++ b/src/styles/1-helpers/_variables.scss
@@ -30,7 +30,7 @@ $link-color: black;
 
 
 $body-bg: $white;
-$base-color: black;
+$base-color: rgb(68, 68, 68);
 $color-theme-primary: black;
 $color-theme-secondary: black;
 $color-theme-tertiary: black;
