--- a/src/styles/3-layout/_nav.scss
+++ b/src/styles/3-layout/_nav.scss
@@ -9,11 +9,11 @@
         @include flex($align:center);
         @include position($p:fixed,$top:0,$left:0,$zIndex:10);
         width:100%;
-        background:rgb(48, 48, 48);
-        color:white;
+        background:white;
+        color:#75E88A;
         height:$navbar-height;
         padding:0 5vw;
-        
+        box-shadow:0 0px 5px rgba(black, .5); 
     }
     
     .nav__title{
@@ -21,11 +21,12 @@
         font-size:20px;
         margin-right:30px;
         font-weight:600;
-        color:white;
+        color:#63D590;
+        
     }
     
     .nav__links{
-        width:60vw;
+        width:30vw;
         display:grid;
         grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
         height:100%;
@@ -43,7 +44,7 @@
 
 @include mq('large'){
     .nav__links{
-        width:40vw;
+        width:20vw;
         display:grid;
         grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
         height:100%;
