--- a/src/styles/3-layout/_sidebar.scss
+++ b/src/styles/3-layout/_sidebar.scss
@@ -1,10 +1,11 @@
 .sideBar{
     @include position($p:fixed, $top:0, $left:0, $zIndex: 20);
-    background:rgb(48, 48, 48);
-    color:white;
+    background:white;
+    color:#75E88A;
     width:100%;
     height:0;
     overflow:hidden;
+    box-shadow:0 0px 5px rgba(black, .5); 
 }
 
 
@@ -13,15 +14,15 @@
     @include flex($center:true);
     @include position($p:fixed,$right:0,$top:0, $zIndex:15);
     border-bottom-left-radius: 6px;
-    background:rgb(#000000, .8);
-    color:$color-theme-tertiary;
+    background:rgb(#63D590, .8);
+    color:white;
     font-size:30px;
 
 }
 
 .sideBar__drop{
     transition: height .5s ease-in;
-    height:300px;
+    height:200px;
     padding:40px 1rem 20px;
 }
 
@@ -37,7 +38,7 @@
     font-weight:700;
     display:block;
     padding:10px 0;
-    color:$color-theme-tertiary;
+    color:#63D590;
 }
 
 .sideBar__navLinks{
