--- a/src/styles/5-pages/_appFeatures.scss
+++ b/src/styles/5-pages/_appFeatures.scss
@@ -13,6 +13,10 @@ $chats-iphone-width: 380px;
         color:white;
     }
 
+    .jumbotron-content{
+        text-align:center;
+    }
+
     .jumbotron-iphone{
         position:absolute;
         width:230px;
